# openavc

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  TRADEMARK.md  dev.py  install.sh  pyproject.toml  requirements.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  RELEASE_NOTES.md
.github/scripts/: wheel_smoke.py
.github/workflows/: ci.yml  docs-rebuild.yml  release-pi.yml  release.yml  site-rebuild.yml  test-signing.yml
docs/: connecting-through-a-bridge.md  creating-drivers.md  creating-plugins.md  deployment.md  devices-and-drivers.md  getting-started.md  it-network-guide.md  macros-and-triggers.md  panel-app-dedicated-android.md  panel-app-dedicated-ios.md  panel-app-kiosk-ios.md  panel-app.md  plugins.md  programmer-overview.md  scheduling-guide.md  scripting-api-reference.md  scripting-guide.md  simulator.md  tutorial-classroom.md  tutorial-conference-room.md  ui-builder.md  updates.md  variables-and-state.md
installer/: build-macos.sh  build.bat  docker-compose.multi-room.yml  docker-compose.yml  install-service.bat  install.sh  macos-uninstall.sh  menubar.py  openavc-macos-run.sh  openavc.icns  openavc.service  openavc.spec  setup.iss  tray.py  tray.spec  uninstall-service.bat  update-helper.sh
installer/pi-image/: build.sh  config
installer/trusted-keys/: README.md
server/: config.py  host_control.py  main.py  runtime_flags.py  system_config.py  tls.py  version.py
server/api/: _engine.py  ai_proxy.py  assets.py  auth.py  discovery.py  error_messages.py  errors.py  ir_learn_ws.py  isc_ws.py  models.py  plugin_ext.py  plugins.py  rest.py  session_tokens.py  themes.py  ws.py
server/cloud/: __init__.py  agent.py  ai_tool_handler.py  alert_monitor.py  cert_manager.py  command_handler.py  config.py  crypto.py  handshake.py  heartbeat.py  protocol.py  sequencer.py  session.py  state_relay.py  tunnel.py
server/core/: backup_manager.py  condition_eval.py  connection_fault.py  device_manager.py  engine.py  event_bus.py  ir_database.py  isc.py  macro_engine.py  plugin_api.py  plugin_installer.py  plugin_loader.py  plugin_registry.py  plugin_test_harness.py  project_library.py  project_loader.py  project_migration.py  scheduler.py  script_api.py  script_engine.py  setup_actions.py  simulation.py  state_persister.py  state_store.py  trigger_engine.py  web_ui_probe.py
server/discovery/: __init__.py  amx_ddp_scanner.py  broadcast_probes.py  community_index.py  companion.py  driver_matcher.py  engine.py  hints.py  icmp.py  mdns_advertiser.py  mdns_scanner.py  network_scanner.py  onvif_scanner.py  oui_data.py  oui_database.py  port_scanner.py  probe_runner.py  protocol_prober.py  result.py  snmp_scanner.py  ssdp_scanner.py  tier_matcher.py
server/drivers/: actions.py  avcdriver.schema.json  avcdriver_semantic.py  base.py  compiled_protocol.py  configurable.py  contract_gen.py  contract_gen_ts.py  driver_loader.py  generic_tcp.py  pythondriver.schema.json  spec.py
server/middleware/: rate_limit.py
server/system/: network.py
server/templates/: advanced_av_suite.avc  classroom.avc  conference_room.avc  simple_projector.avc
server/transport/: binary_helpers.py  frame_parsers.py  http_client.py  http_listener.py  ir_render.py  mqtt.py  multicast_listener.py  osc.py  osc_codec.py  serial_transport.py  ssh.py  tcp.py  tcp_listener.py  types.py  udp.py
server/updater/: __init__.py  backup.py  checker.py  manager.py  platform.py  rollback.py
server/utils/: fileio.py  log_buffer.py  logger.py  net_safety.py  regex_safety.py  spawn.py
simulator/: __main__.py  api.py  base.py  engine.py  http_simulator.py  network_conditions.py  osc_simulator.py  scaffold.py  server.py  tcp_simulator.py  udp_simulator.py  validate.py  websocket_simulator.py  yaml_auto.py
tests/: conftest.py  helpers.py  test_action_picker_stale_guard.py  test_ai_chat_store.py  test_ai_proxy.py  test_ai_script_source_reload.py  test_ai_system_tools.py  test_ai_tool_handler.py  test_ai_tool_handler_surgical.py  test_api.py  test_api_auth.py  test_api_base_client_guard.py  test_api_child_entities.py  test_api_endpoints.py  test_app_beforeunload_guard.py  test_apply_project_dynamics.py  test_asset_url_encoding.py  test_assets.py  test_audio_level_scale.py  test_auth_posture.py  test_auth_reconnect_pause.py  test_auth_url_helpers.py  test_avcdriver_semantic_purity.py  test_backup_manager.py  test_base_driver_children.py  test_base_driver_watchdog.py  test_binary_helpers.py  test_binding_migration.py  test_cloud_agent.py  test_cloud_agent_hardening.py  test_cloud_agent_reconnect.py  test_cloud_alert_monitor.py  test_cloud_config.py  test_cloud_crypto_vectors.py  test_cloud_state_relay.py  test_cloud_tunnel.py  test_cloud_update_flow.py  test_compiled_protocol.py  test_compiled_protocol_purity.py  test_condition_eval.py  (+186 more)
tests/e2e/: test_child_entities.py
tests/fixtures/: ai_errors_harness.cjs  audio_level_scale_harness.cjs  auth_url_harness.cjs  device_config_dialog_harness.cjs  device_setting_validate_harness.cjs  device_settings_helpers_harness.cjs  device_utils_harness.cjs  device_view_helpers_harness.cjs  driver_builder_actions_harness.cjs  driver_builder_store_harness.cjs  driver_builder_validate_harness.cjs  driver_validation_cases.json  driver_validation_messages.json  has_update_semver_harness.cjs  icon_picker_harness.cjs  lifecycle_editor_osc_harness.cjs  live_test_helpers_harness.cjs  panel_harness.cjs  plugins_helpers_harness.cjs  project_import_harness.cjs  project_store_save_harness.cjs  query_entry_helpers_harness.cjs  response_builder_helpers_harness.cjs  script_runtime_errors_harness.cjs  step_dnd_helpers_harness.cjs  streams_client_harness.cjs  trigger_helpers_harness.cjs  ui_builder_helpers_harness.cjs  variables_shared_helpers_harness.cjs  ws_client_harness.cjs
tests/simulators/: pjlink_simulator.py  samsung_mdc_simulator.py  vmix_simulator.py
themes/: dark-default.json  high-contrast.json  light-modern.json  luxury.json  midnight-blue.json  minimal.json  slate.json  warm-charcoal.json
web/panel/: index.html  panel-elements.css  panel.css  (+1 more)
(+293 files in other folders)
