[project]
name = "openavc"
version = "0.20.0"
description = "Open-source AV room control platform"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Aaron Todd"},
]

dependencies = [
    "fastapi==0.135.3",          # MIT - Web framework + WebSocket support
    "python-multipart==0.0.24",  # Apache-2.0 - Required by FastAPI for file uploads
    "uvicorn[standard]==0.44.0", # BSD-3 - ASGI server
    "websockets==16.0",          # BSD-3 - WebSocket library
    "pyserial==3.5",             # BSD-3 - RS-232 serial communication
    "pyserial-asyncio==0.6",     # BSD-3 - Async serial support
    "pydantic==2.11.1",          # MIT - Data validation
    "pyyaml==6.0.3",             # MIT - YAML parsing
    "packaging==24.2",           # Apache-2.0/BSD-2 - version parsing (plugin/driver min-version gates)
    "httpx==0.28.1",             # BSD-3 - Async HTTP client (for HTTP transport)
    "gmqtt==0.7.0",              # MIT - Async MQTT client (for MQTT transport; pure Python, asyncio-native)
    "certifi==2026.6.17",        # MPL-2.0 (CA data) - CA bundle for stdlib ssl on the frozen macOS app (already pulled in by httpx); see server/main.py
    "croniter==6.2.2",           # MIT - Cron expression parser (pure Python)
    "defusedxml==0.7.1",         # PSF - Safe XML parsing (prevents XXE/billion laughs)
    "ifaddr==0.2.0",             # MIT - Network interface detection (discovery subnet auto-detect)
    "psutil==7.2.2",             # BSD-3 - System metrics (cloud heartbeat: CPU, memory, disk, temperature)
    "aiohttp==3.13.5",           # Apache-2.0 - Async HTTP server (simulator HTTP device servers)
    "cryptography>=44.0.0,<45",  # Apache-2.0/BSD-3 - X.509 cert generation for HTTPS
    "tzdata==2026.1",            # Apache-2.0 - IANA tz database for zoneinfo on Windows (cloud maintenance-window timezones; Windows ships no system tz db)
]

[project.optional-dependencies]
# Lightweight test/lint tools used by the CI gate. Pinned so CI runs against
# the same versions everywhere (the gate installs this, not `dev`).
test = [
    "pytest==8.3.5",             # MIT - Testing framework
    "pytest-asyncio==0.26.0",    # Apache-2.0 - Async test support
    "pytest-timeout==2.3.1",     # MIT - Per-test timeout: a hung test fails fast (with a stack dump) instead of stalling CI to its 6h ceiling
    "ruff>=0.6.0",               # MIT - Fast Python linter/formatter (unpinned, linter updates are safe)
]
# Full local dev environment: the test tools plus the Playwright E2E stack.
dev = [
    "openavc[test]",
    "pytest-playwright==0.7.0",  # Apache-2.0 - Playwright pytest integration (E2E IDE tests). Install browsers with `python -m playwright install chromium` after `pip install -e .[dev]`.
]
pi = [
    "gpiozero>=2.0.0",           # BSD-3 - GPIO access (Pi only)
]

[tool.setuptools.packages.find]
include = ["server*", "tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# pytest-playwright (a [dev]-only extra) drives a synchronous Playwright event
# loop that collides with pytest-asyncio's loop, poisoning the async unit suite
# with hundreds of "event loop is already running" errors whenever both plugins
# load. That happens on a local .[dev] install but not in CI, which installs
# .[test] (no Playwright). Disable the plugin and skip the Playwright e2e tests
# for the default run so `pytest` is the same clean unit run everywhere.
# Run the e2e suite on demand (needs `python -m playwright install chromium`):
#   pytest tests/e2e -o addopts=""
#
# --timeout caps any single test so a deadlock (e.g. a blocking socket/await
# that never returns) fails in a couple of minutes with a dumped traceback,
# instead of stalling the whole job to GitHub's 6h ceiling. The method is left
# to pytest-timeout's per-platform default: SIGALRM on Linux (fails just that
# test, suite continues), thread-based on Windows (dumps stacks, ends the run).
addopts = "-p no:playwright --ignore=tests/e2e --timeout=120"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"server/main.py" = ["E402"]
"server/api/rest.py" = ["E402"]
"server/core/project_loader.py" = ["E402"]
"server/cloud/ai_tool_handler.py" = ["E402"]
